--- a/stylesheets/scss/_content.scss
+++ b/stylesheets/scss/_content.scss
@@ -145,6 +145,7 @@
 }
 
 .front-page {
+  @include flexbox;
 
   .main-feature {
     min-height: 250px;
