--- a/stylesheets/scss/_search.scss
+++ b/stylesheets/scss/_search.scss
@@ -159,7 +159,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  padding: 1px 0 0 1px;
+  padding: 7px;
 
   svg {
     @include fill($secondary-color, .67);
